fixed some spacing issues

--- a/assets/css.css
+++ b/assets/css.css
@@ -214,6 +214,7 @@ border: none;
 
 .two-sided-flex{
     display: flex;
+    justify-content: space-between;
 }
 /* Contact Details */
 #contact-details {
@@ -507,7 +508,7 @@ border: none;
 
     #image-side {
         width: 100%;
-        height: 400px;
+        height: 350px;
         z-index: -1;
     }
 
@@ -556,9 +557,14 @@ border: none;
         width: 100%;
     }
 
+    .fullsize-img{
+        max-height: 350px;
+    }
+
     .two-sided-flex{
         display: flex;
         flex-direction: column-reverse;
+
     }
 
     .footer-nav{
@@ -584,6 +590,25 @@ border: none;
         padding: 40px;
         display: none;
         right: 10%;
+    }
+
+    .two-sided-flex{
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    #image-side{
+        margin-bottom: 40px;
+    }
+
+    footer{
+        margin-top: 70px;
+        position: initial;
+    }
+
+    .fullsize-img{
+        max-height: 350px;
+        max-width: 800px;
     }
 }
 
@@ -626,9 +651,7 @@ border: none;
 
     #text-side {
         padding-top:20vh ;
-        padding-right: 10%;
-        min-width: 30%;
-        max-width: 50%;
+        padding-right: calc(30vw - 700px);
         align-items: center;
     }
 
